--- a/src/Cpnucleo.Blazor/Pages/Apontamento/Listar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Apontamento/Listar.razor
@@ -1,6 +1,6 @@
 @page "/apontamento/listar"
 @inject IJSRuntime JS;
-@inject ICpnucleoApiService cpnucleoApiService;
+@inject ICpnucleoApiClient cpnucleoApiClient;
 @inject NavigationManager navigationManager;
 
 <PageTitle>CPN - Apontamentos</PageTitle>
@@ -49,7 +49,7 @@
                                         <td>@item.Id</td>
                                         <td>@item.Descricao</td>
                                         <td>@item.Tarefa.Nome</td>
-                                        <td>@item.DataApontamento.Value.ToString("dd/MM/yyyy")</td>
+                                        <td>@item.DataApontamento.ToString("dd/MM/yyyy")</td>
                                         <td>@item.QtdHoras</td>
                                         <td>@item.DataInclusao.ToString("dd/MM/yyyy")</td>
                                         @if (apontamentos.Count() > 0)
@@ -194,18 +194,18 @@
 </div>
 
 @code {
-    private ApontamentoViewModel model = new ApontamentoViewModel();
-    private IEnumerable<ApontamentoViewModel> apontamentos;
-    private IEnumerable<TarefaViewModel> tarefas;
+    private ApontamentoDTO model = new ApontamentoDTO();
+    private IEnumerable<ApontamentoDTO> apontamentos;
+    private IEnumerable<TarefaDTO> tarefas;
 
     private async Task HandleValidSubmit()
     {
-        await cpnucleoApiService.PostAsync<SistemaViewModel>("apontamento", "", model);
+        await cpnucleoApiClient.PostAsync<SistemaDTO>("apontamento", "", model);
 
         model.IdRecurso = new Guid("dcde1113-ab83-489e-ac0c-d7de2caa2279");
 
-        apontamentos = await cpnucleoApiService.GetAsync<IEnumerable<ApontamentoViewModel>>("apontamento", "getbyrecurso", "", model.IdRecurso);
-        tarefas = await cpnucleoApiService.GetAsync<IEnumerable<TarefaViewModel>>("tarefa", "getbyrecurso", "", model.IdRecurso);
+        apontamentos = await cpnucleoApiClient.GetAsync<IEnumerable<ApontamentoDTO>>("apontamento", "getbyrecurso", "", model.IdRecurso);
+        tarefas = await cpnucleoApiClient.GetAsync<IEnumerable<TarefaDTO>>("tarefa", "getbyrecurso", "", model.IdRecurso);
 
         await JS.InvokeVoidAsync("fecharModalApontamento");
     }
@@ -214,8 +214,8 @@
     {
         model.IdRecurso = new Guid("dcde1113-ab83-489e-ac0c-d7de2caa2279");
 
-        apontamentos = await cpnucleoApiService.GetAsync<IEnumerable<ApontamentoViewModel>>("apontamento", "getbyrecurso", "", model.IdRecurso);
-        tarefas = await cpnucleoApiService.GetAsync<IEnumerable<TarefaViewModel>>("tarefa", "getbyrecurso", "", model.IdRecurso);
+        apontamentos = await cpnucleoApiClient.GetAsync<IEnumerable<ApontamentoDTO>>("apontamento", "getbyrecurso", "", model.IdRecurso);
+        tarefas = await cpnucleoApiClient.GetAsync<IEnumerable<TarefaDTO>>("tarefa", "getbyrecurso", "", model.IdRecurso);
 
         await JS.InvokeVoidAsync("modalApontamento");
         await JS.InvokeVoidAsync("dataTables", "Apontamentos (Últimos 30 dias)");
