--- a/src/Cpnucleo.Blazor/Pages/RecursoTarefa/Incluir.razor
+++ b/src/Cpnucleo.Blazor/Pages/RecursoTarefa/Incluir.razor
@@ -1,5 +1,5 @@
 @page "/recursoTarefa/incluir/{idTarefa:guid}"
-@inject ICpnucleoApiService cpnucleoApiService;
+@inject ICpnucleoApiClient cpnucleoApiClient;
 @inject NavigationManager navigationManager;
 
 <PageTitle>CPN - Inclusão de Recurso (Tarefa)</PageTitle>
@@ -63,14 +63,14 @@
     [Parameter]
     public Guid IdTarefa { get; set; }
 
-    private RecursoTarefaViewModel model = new RecursoTarefaViewModel();
-    private TarefaViewModel tarefa;
-    private IEnumerable<RecursoViewModel> recursos;
+    private RecursoTarefaDTO model = new RecursoTarefaDTO();
+    private TarefaDTO tarefa;
+    private IEnumerable<RecursoDTO> recursos;
 
     protected override async Task OnInitializedAsync()
     {
-        tarefa = await cpnucleoApiService.GetAsync<TarefaViewModel>("tarefa", "", IdTarefa);
-        recursos = await cpnucleoApiService.GetAsync<IEnumerable<RecursoViewModel>>("recurso", "");
+        tarefa = await cpnucleoApiClient.GetAsync<TarefaDTO>("tarefa", "", IdTarefa);
+        recursos = await cpnucleoApiClient.GetAsync<IEnumerable<RecursoDTO>>("recurso", "");
 
         model.IdTarefa = IdTarefa;
         model.IdRecurso = recursos.FirstOrDefault().Id;
@@ -78,7 +78,7 @@
 
     private async Task HandleValidSubmit()
     {
-        await cpnucleoApiService.PostAsync<RecursoTarefaViewModel>("recursoTarefa", "", model);
+        await cpnucleoApiClient.PostAsync<RecursoTarefaDTO>("recursoTarefa", "", model);
 
         navigationManager.NavigateTo($"/recursoTarefa/listar/{IdTarefa}");
     }
