--- a/src/Cpnucleo.Blazor/Pages/Workflow/Remover.razor
+++ b/src/Cpnucleo.Blazor/Pages/Workflow/Remover.razor
@@ -1,5 +1,5 @@
 @page "/workflow/remover/{id:guid}"
-@inject ICpnucleoApiService cpnucleoApiService;
+@inject ICpnucleoApiClient cpnucleoApiClient;
 @inject NavigationManager navigationManager;
 
 <PageTitle>CPN - Remoção de Workflow</PageTitle>
@@ -72,16 +72,16 @@
     [Parameter]
     public Guid Id { get; set; }
 
-    private WorkflowViewModel model = new WorkflowViewModel();
+    private WorkflowDTO model = new WorkflowDTO();
 
     protected override async Task OnInitializedAsync()
     {
-        model = await cpnucleoApiService.GetAsync<WorkflowViewModel>("workflow", "", Id);
+        model = await cpnucleoApiClient.GetAsync<WorkflowDTO>("workflow", "", Id);
     }
 
     private async Task HandleValidSubmit()
     {
-        await cpnucleoApiService.DeleteAsync("workflow", "", Id);
+        await cpnucleoApiClient.DeleteAsync("workflow", "", Id);
 
         navigationManager.NavigateTo("/workflow/listar");
     }
