--- a/src/Cpnucleo.Blazor/Shared/CardApontamentoFinalizado.razor
+++ b/src/Cpnucleo.Blazor/Shared/CardApontamentoFinalizado.razor
@@ -1,7 +1,7 @@
 ﻿<li class="@Tarefa.TipoTarefa.Element">
     @Tarefa.Nome
     <div class="agile-detail">
-        <i class="fa fa-clock-o"></i> @Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
+        <i class="fa fa-clock-o"></i> @Tarefa.DataTermino.ToString("dd/MM/yyyy")
         <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@Tarefa.Id criada por @Tarefa.Recurso.Nome</div>
         @if (Tarefa.HorasRestantes <= 0)
         {
@@ -21,5 +21,5 @@
 
 @code {
     [Parameter]
-    public TarefaViewModel Tarefa { get; set; }
+    public TarefaDTO Tarefa { get; set; }
 }
